# pix2fen

./: README.md  chessboard_to_fen.py  model.py  pyproject.toml
dataset/: generate-dataset.py  get-boards.py  get-pieces.py  image-extraction.py
pix2fen/: cli.py  crop.py  fen.py  inference.py
scripts/: download_model.py
src/pix2fen/: class_indices.json  download_model.py  inference.py  pix2fen_clipboard.py
