[project]
name = "pix2fen"
version = "0.1.0"
authors = [{name="Max Bretschneider", email="maxbretschneider@mailbox.org"}]
description = "Chessboard screenshot to FEN"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python",
    "numpy",
    "pyperclip"
]
optional-dependencies = { dev = ["tensorflow"] }

[project.scripts]
pix2fen = "pix2fen.cli:main"
pix2fen-clipboard = "pix2fen.pix2fen_clipboard:main"

[tool.setuptools]
packages = ["pix2fen"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

